--- a/Kodekit.Web/Shared/NavMenu.scss
+++ b/Kodekit.Web/Shared/NavMenu.scss
@@ -78,9 +78,17 @@
             position: absolute;
             bottom: 20px;
             left: 32px;
+            transition: transform 0.3s ease-in-out;
 
             svg {
                 width: 14px;
+                margin-left: 8px;
+                vertical-align: middle;
+                margin-top: -2px;
+            }
+
+            &:hover {
+                transform: scale(1.05, 1.05);
             }
         }
     }
